--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ vignettes/*.pdf
 /*_cache/
 /cache/
 
-# Temporary files created by R markdown
+# Temprary files created by R markdown
 *.utf8.md
 *.knit.md
 
@@ -38,3 +38,7 @@ rsconnect/
 #VS Solution File
 *.sln
 .Rproj.user
+
+#Ignore created output
+*.jpeg
+*.jpg
